<resources>
    <string name="app_name">Quicklogs</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="type_image">Type image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_of_expense">Image of expense</string>
    <string name="amount">Amount</string>
    <string name="no_expenses_entered">No expenses entered</string>
    <string name="home">Home</string>
    <string name="predict">Predict</string>
    <string name="logout">Logout</string>
    <string name="rupee">₹</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="image_history">Image History</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="welcome_msg">Welcome\nto \Quicklogs</string>
    <string name="proceed">Proceed</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passerror">Password must be 8 char long with 1 UpperCase letter, 1 special character, 1 Number</string>
    <string name="retypeerror">Password does not match</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_me_up">Sign me up!</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="username">Username</string>
    <string name="desired_annual_savings">Desired Annual Savings</string>
    <string name="maximum_daily_expense">Maximum Daily Expense</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about">Expense Tracker application will keep and track of income-expense of a user on a day to day basis. \nEach user will be required to register to use the application. \nThis application contains a calculator that takes income (annually), maximum daily expense, and the amount of saving a user plans to reach annually as inputs and calculates the amount of saving. \nIf the user exceeds the daily expense limit, the amount of saving is reduced by the amount of extra expense. \nIf the saving becomes 0 then it gives you a new daily expense amount to maintain the saving goals, and if the daily expense is less than the amount of planned expense, then it will add the surplus to the saving. \nThe expense tracking application will generate a report at the end of a month to show incomeexpense via multiple graphs.\n</string>
    <string name="developer">COST: FREE\nDeveloped by\nRISHITHA PERICHERLA \nand\nSAKTHI KARTHIGAI SELVI SEKAR\n</string>
    <string name="contact1">Contact Us\n</string>
    <string name="contact2">Whether you have a comment or suggestion to share, we look forward to hearing from you. \n\nFeel free to reach out by emailing sakthikarthigaiselvi@gmail.com.\n\nFor technical help, email us at quicklogs@gmail.com.</string>
    <string name="contact3">If you would rather call us or send us a letter, you can reach us at 1250 Bellflower Blvd, LongBeach, CA 90840 | 555–222–0000.</string>
    <string name="help1">Guide\n</string>
    <string name="help2">Create Account\nAdd Daily Expense under Add Expense \nAdd Annual Income and Desired Annual Savings in Calculate Daily savings.\nClick on Predict Menu to View the Todays Savings and How Much money You Should Save to Reach your Desired Annual Savings </string>
    <string name="help3">Frequently Asked Questions\n</string>
    <string name="help4">Does the app has in-app Purchases? \nAns: No, The app is free to use.\n\nCan I view the report of my expenses?\nAns: Yes, U can view the graph of how much u have spent in a particular category by clicking the Category Tab\n\nDo I get a report of my Daily Expenses?\nAns: Yes, A line graph is displayed on the Home page to show the track of your daily expenses\n</string>
    <string name="about1">About Us</string>
    <string name="change">Change Password</string>
    <string name="changeprofile">Update Profile</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New password</string>
    <string name="save">Save</string>

</resources>
