<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_predict"
            android:id="@+id/nav_predict"
            android:title="@string/predict" />

    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
    <item
        android:icon="@drawable/ic_logout"
        android:id="@+id/nav_logout"
        android:title="@string/logout" />
        <item
        android:icon="@drawable/ic_settings"
        android:id="@+id/nav_settings"
        android:title="@string/settings" />
    </group>
</menu>
