<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editoldpassword"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Old Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/change"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/change"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="208dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editRetype"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/save"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="52dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRetype" />

</androidx.constraintlayout.widget.ConstraintLayout>