<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity">

    <TextView
        android:id="@+id/contact1"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/contact1"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact2"
        android:layout_width="350dp"
        android:layout_height="172dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/contact2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact1" />

    <TextView
        android:id="@+id/contact3"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/contact3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact2" />

    <Button
        android:id="@+id/contact_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        android:text="OK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact3" />

</androidx.constraintlayout.widget.ConstraintLayout>